# schmetterling

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md  WORK_PACKAGES.md
.vscode_win/: c_cpp_properties.json  settings.json
and_again/: CMakeLists.txt
and_again/src/: client_application.cpp  client_application.hpp  main.cpp
and_again/src/layer_1/: event_dispatcher.cpp  event_trigger.hpp  logger.hpp  renderer.cpp  renderer.hpp  sdl_event_trigger.cpp  sdl_event_trigger.hpp  sdl_initializer.cpp  sdl_initializer.hpp  update_event_trigger.cpp  update_event_trigger.hpp  window.cpp  window.hpp
client/: CMakeLists.txt  Cargo.toml
client/src/: client_application.cpp  client_application.hpp  event_dispatcher.rs  event_handler.cpp  event_handler.hpp  game_state.cpp  game_state.hpp  game_state.rs  input_handler.cpp  input_handler.hpp  interval_trigger.rs  main.cpp  main.rs  renderer.cpp  renderer.hpp  renderer.rs  update_trigger.rs  updater.rs  window.cpp  window.hpp
client/test/: test_a.cpp
client2/: CMakeLists.txt
client2 copy/: CMakeLists.txt
client2 copy/src/: application.cpp  application.hpp  camera.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
client2 copy/src/interfaces/: interface_renderable.hpp  interface_renderer.hpp
client2/src/: event_handler.hpp  main.cpp  sdl_initializer.hpp
client2/src/application/: application.cpp  application.hpp
client2/src/infrastructure/: triggerer_render.hpp  triggerer_update.hpp
client2/src/interfaces/: interface_triggerer.hpp
client2/test/: CMakeLists.txt  test_renderer.cpp  test_window.cpp
examples_crate/: Cargo.toml
examples_crate/examples/: basic_physics.rs  draw_primitives.rs  draw_textures.rs  multi_thread_events.rs  text_rendering.rs  window_application.rs
old_code/client_old/: CMakeLists.txt
old_code/client_old/src/: client_application.cpp  client_application.hpp  entity_manager.hpp  game_client.hpp  main.cpp  network_handler.hpp  sdl_initializer.cpp  sdl_initializer.hpp  window.hpp
old_code/client_rs/src/: main.rs
old_code/server_old/: CMakeLists.txt
old_code/server_old/src/: main.cpp  network_handler.hpp  server_application.cpp  server_application.hpp
old_code/server_rs/src/: main.rs
old_code/shared_rs/src/: lib.rs
old_code/src/: application.hpp  eventhandler.hpp  gamestate.cpp  gamestate.hpp  inputhandler.hpp  main.cpp  subsysteminitializer.cpp  subsysteminitializer.hpp  window.cpp
samples/: CMakeLists.txt
samples/event_trigger_listener_threads/: CMakeLists.txt
samples/event_trigger_listener_threads/src/: main.cpp
samples/wait_for_events_sample/: CMakeLists.txt
samples/wait_for_events_sample/src/: main.cpp
sdl2_ffi/: Cargo.toml
sdl2_ffi/src/: lib.rs
sdl2_image_ffi/: Cargo.toml
sdl2_image_ffi/src/: lib.rs
sdl2_ttf_ffi/: Cargo.toml
sdl2_ttf_ffi/src/: lib.rs
sdl2_wrapper/: Cargo.toml
sdl2_wrapper/src/: lib.rs
server/: CMakeLists.txt
server/src/: main.cpp  server_application.cpp  server_application.hpp
shared/: CMakeLists.txt
shared/include/: circular_buffer.hpp  physics_simulator.hpp  position.hpp  rigid_body.hpp  sdl_net_initializer.hpp  size2.hpp  time_frame.hpp  vector2.hpp  velocity.hpp  version.hpp
shared/src/: physics_simulator.cpp  sdl_net_initializer.cpp
shared/test/: test_circular_buffer.cpp
src/: application.cpp  application.hpp  application_old.cpp  eventhandler.cpp  inputhandler.cpp  main.cpp  window.hpp
