[package]
name = "examples_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2_ffi = { path = "../sdl2_ffi" }
sdl2_image_ffi = { path = "../sdl2_image_ffi" }
sdl2_ttf_ffi = { path = "../sdl2_ttf_ffi" }
sdl2_wrapper = { path = "../sdl2_wrapper" }
